@@ -1,3 +1,14 @@
+2007-06-11  Don Scorgie  <dscorgie@svn.gnome.org>
+
+	* src/test-resolver.c:
+	Add gnome-vfs-init() and section (for results section)
+	
+	* src/yelp-utils.c: 
+	Add support for resolving info and full path uri's.
+
+	* src/yelp-utils.h:
+	Add long description of resolver function
+	
 2007-06-02  Don Scorgie  <dscorgie@cvs.gnome.org>
 
 	* src/test-resolver.c: 
